--- a/frontend/src/components/Footer/style.css
+++ b/frontend/src/components/Footer/style.css
@@ -1,17 +1,19 @@
+
 .footer {
     background-color: rgb(27, 27, 27);
     border-top:2px solid rgb(58, 54, 54);
+    height: 100px;
     position: relative;
     width: 100%;
-    /* bottom: 0; */
-    top: 300px;
+    bottom: 0; 
+     top: 300px;
     color: white;
     font-size: 25px;
     text-align: center;
     display: grid;
     grid-template-columns:repeat(3,600px) ;
     background-color:orange;
-    overflow: hidden;
+    overflow: hidden; 
 
     
    }
