--- a/frontend/src/components/cart/style.css
+++ b/frontend/src/components/cart/style.css
@@ -27,6 +27,8 @@
 .imgCart{
     /* height: 100%;
     width: 120%; */
+    width: 200px;
+    height: 220px;
 }
 .ContinueShopping{
     /* border-radius: 8%; */
