--- a/frontend/src/components/productInfo/style.css
+++ b/frontend/src/components/productInfo/style.css
@@ -7,24 +7,38 @@
   }
 .productInfoMain{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     /* margin-top: 5%; */
-    
+
 }
 .productInfoMap{
     display: grid;
    
 height: 120%;
-width: 250%;
-    background-color: rgb(215, 216, 212);
+/* width: 110%; */
+background-color: rgb(216, 216, 216);
     /* justify-items:center; */
+    gap: 1%;
+    box-shadow: 2px 2px 5px rgb(0, 0, 0);
+
 }
 .nameProduct{
     font: 2.5em sans-serif;
 }
+.AvailabilityMain{
+    display: flex;
+    font: 1em sans-serif;
+
+}
+.Availability{
+    color: rgb(25, 162, 15);
+    font: 1em sans-serif;
+
+}
 .imgProductinfo{
     justify-self: center;
-    width: 80%;
+    width: 100%;
+    height: 80%;
     
 }
 .priceProduct{
@@ -58,28 +72,34 @@ color: rgb(249, 249, 249);
     .staticProdutInfo{
         display: grid;
         /* justify-content: end; */
+   
        
     }
 
     .DELIVERY{
-        background-color: rgb(146, 153, 153);
+        background-color: rgb(216, 216, 216);
         display: grid;
-        height: 30%;
+        height: 60%;
         width: 60%;
+    box-shadow: 2px 2px 5px rgb(0, 0, 0);
+
         /* margin-left: 100%; */
     }
     .DELIVERYINFO{
         font: 1.6em sans-serif;
+        
     }
     .DELIVERYINFODISCRIPTION{
         font: 1.2em sans-serif;
 
     }
     .RETURNS{
-        background-color: rgb(146, 153, 153);
+        background-color: rgb(216, 216, 216);
         display: grid;
-        height: 30%;
+        height: 60%;
         width: 60%;
+    box-shadow: 2px 2px 5px rgb(8, 8, 8);
+        
         /* margin-left: 100%; */
     }
     .RETURNSINFO{
@@ -89,11 +109,13 @@ color: rgb(249, 249, 249);
         font: 1.2em sans-serif;
     }
     .WARRANTY{
-        background-color: rgb(146, 153, 153);
+        background-color: rgb(216, 216, 216);
         display: grid;
-        height: 30%;
+        height: 60%;
         width: 60%;
         /* margin-left: 100%; */
+    box-shadow: 2px 2px 5px rgb(8, 8, 8);
+
     }
     .WARRANTYINFO{
         font: 1.6em sans-serif;
