--- a/frontend/src/components/About/style.css
+++ b/frontend/src/components/About/style.css
@@ -1,7 +1,20 @@
 .about_main{
     display: grid;
     justify-content: center;
+
 }
 .p_first{
     width: 200px;
+}
+.main_div_about{
+    font-size: 20px;
+    position: relative;
+    top: 100px;
+    font-weight: bold;
+}
+.div_ul{
+    position: relative;
+    left: 60px;
+    display: grid;
+    width: 90%;
 }
