--- a/frontend/src/components/Contact/style.css
+++ b/frontend/src/components/Contact/style.css
@@ -7,15 +7,33 @@
     display: grid;
     justify-content: end;
 }
-/* .contect_P{
-    width: 100px;
-} */
+
 .parent_contect{
     display: grid;
     justify-content: center;
+    
+}
+.parent_contect1{
+  
+    position: relative;
+    top:100px ;
+    font-size: 20px;
 }
 .tow_contect{
     display: grid;
     grid-template-columns: repeat(2,600px);
     justify-content: center;
+}
+.frame_image{
+    width: 100%;
+    height: 300px;
+
+}
+.submit_button{
+    background-color: orange;
+    width: 100%;
+    height: 40px;
+    position: relative;
+    margin-top: 20px;
+    font-size: 20px;
 }
