--- a/frontend/src/components/Register/style.css
+++ b/frontend/src/components/Register/style.css
@@ -2,19 +2,31 @@
     display: grid;
     justify-content: center;
     position: relative;
-    top: px;
+    top: 100px;
+    font-size: 20px;
     
 }
 .input_register{
-    width: 200px;
-    height: 20px;
+    width: 100%;
+    height: 30px;
     margin-top: 10px;
+
 }
 .but_create{
     background-color: orange;
-    width: 200px;
+    width: 100%;
     height: 40px;
+    position: relative;
+    margin-top: 20px;
+    font-size: 20px;
 }
 .but_create:hover{
     cursor: pointer;
+}
+.id1{
+    width: 100%;
+    height: 30px;
+    font-size: 15px;
+
+
 }
