--- a/frontend/src/components/productInfo/style.css
+++ b/frontend/src/components/productInfo/style.css
@@ -15,7 +15,7 @@
     display: grid;
    
 height: 120%;
-/* width: 110%; */
+width: 70%;
 background-color: rgb(216, 216, 216);
     /* justify-items:center; */
     gap: 1%;
