--- a/frontend/src/components/cart/style.css
+++ b/frontend/src/components/cart/style.css
@@ -7,30 +7,32 @@
   }
   .cartMain{
     display: grid;
-    justify-content:space-evenly;
-    margin-top: 5%;
+    justify-content:center;
+    margin-top: 3%;
    
 }
 .CartMap{
-    display: flex;
-    
-  justify-content: space-between;
-
-    background-color: rgb(220, 221, 221);
-border-radius: 2%;
-box-shadow: 3px 3px rgb(243, 150, 62);
-
-}
-.CartA{
-    display: flex;
-    gap: 1%;
+    display: block;
    
+  justify-content: center;
+
+ /* width: 200%;  */
+    background-color: rgb(220, 221, 221);
+/* border-radius: 2%; */
+box-shadow: 5px 5px 5px rgb(243, 150, 62);
+
 }
+.Cart{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
 .MyCart{
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 .nameCart{
-    font-size: 2rem;
+    font-size: 2.3rem;
 }
 
 .imgCart{
@@ -42,9 +44,9 @@ box-shadow: 3px 3px rgb(243, 150, 62);
 .namePrice{
 display: grid;
 font-size: 1.3rem;
+gap: 8%;
 }
 .ContinueShopping{
-   
     border:0;
     font-size: 120%;
 background-color: rgb(243, 150, 62);
@@ -57,12 +59,13 @@ background-color: rgb(7, 7, 7);
 color: rgb(249, 249, 249);
 }
 .ClearCart{
-   height: 15%;
-   width: 20%;
+   /* height: 60%; */
+   /* width: 20%; */
     border:0;
     font-size: 120%;
 background-color: rgb(243, 150, 62);
 border-radius: 8%;
+/* margin-top: 20%; */
 
 }
 .ClearCart:hover{
@@ -70,8 +73,8 @@ background-color: rgb(7, 7, 7);
 color: rgb(249, 249, 249);
 }
 .SubtotalMain{
-    display: grid;
-    justify-self: start;
+    display: flex;
+    gap: 85%;
     
 }
 .ProceedToCheckout{
@@ -89,10 +92,12 @@ color: rgb(249, 249, 249);
 .Subtotal{
     font-size: 1.6rem;
 }
+
 .QuntityCart{
     display: flex;
-    height: 20%;
-    font: 1.5em sans-serif;
+    
+  
+    font: 2em sans-serif;
 border-radius: 8%;
 border: 0%;
 
@@ -117,10 +122,18 @@ box-shadow: 1px 1px #292828;
     box-shadow: 2px 2px #292828;
    
 }
-.buttonCart{
+.buttonCartA{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 height: 10%;
 margin-top: 10%;
-
+gap: 14%;
+}
+.buttonCart{
+    display: flex;
+    justify-items: space-evenly;
+height: 0%;
+gap: 10%;
+margin-top: 21.5%;
+margin-right: 4%;
 }
