--- a/frontend/src/components/Home/style.css
+++ b/frontend/src/components/Home/style.css
@@ -7,7 +7,7 @@ display: inline-flex;
   padding-top: 50px;
   width: 1050px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 20rem 20rem 20rem 20rem ;
 }
 .product_image{
   width: 200px;
@@ -45,3 +45,34 @@ grid-template-rows: 1fr 1fr 2fr;
   background-color:rgb(192, 192, 192) ;
   width: 250px;
 }
+.category{
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+.category:hover{
+  cursor: pointer;
+  color: orange;
+}
+.category1{
+  margin-top: 20px;
+}
+.but_cart_view{
+  background-color: orange;
+  width: 100%;
+  height: 40px;
+  position: relative;
+  margin-top: 20px;
+  font-size: 20px;
+}
+.but_cart_view:hover{
+  cursor: pointer;
+}
+.div_but{
+  display: grid;
+  grid-template-columns: repeat(2,100px);
+  column-gap: 10px;
+  margin-bottom: 20px;
+}
+
+
