--- a/frontend/src/components/Piganation/style.css
+++ b/frontend/src/components/Piganation/style.css
@@ -1,4 +1,6 @@
-
+html {
+    scroll-behavior: smooth;
+  }
 .div_page1{
     display: grid;
     grid-template-columns: repeat(3,100px);
@@ -11,7 +13,7 @@
 }
 .but_11{
 position: relative;
-left: 100px;
+left: 800px;
 font-size: 40px;
 height: 50px;
 background-color: white;
@@ -26,7 +28,7 @@ border: none;
 }
 .but_22{
     position: relative;
-    left: 500px;
+    left: 1000px;
     height: 50px;
     font-size: 40px;
     height: 50px;
