--- a/frontend/src/components/Products/style.css
+++ b/frontend/src/components/Products/style.css
@@ -2,3 +2,12 @@
     display: flex;
     justify-content: space-evenly;
 }
+.admin_product_image{
+    width: 50px;
+    height: 50px;
+}
+
+.product_Details{
+display: flex;
+justify-content: space-evenly;
+}
