--- a/frontend/src/components/Home/style.css
+++ b/frontend/src/components/Home/style.css
@@ -128,4 +128,28 @@ grid-template-rows: 1fr 1fr 2fr;
 
 
 }
+.but_11{
+  position: relative;
+  left: 800px;
+  font-size: 40px;
+  height: 50px;
+  background-color: white;
+  border: none;
+  
+  }
+  .but_11:hover{
+      transform: rotate(20deg)
+  }
+  .but_22:hover{
+      transform: rotate(-20deg)
+  }
+  .but_22{
+      position: relative;
+      left: 1000px;
+      height: 50px;
+      font-size: 40px;
+      height: 50px;
+  background-color: white;
+  border: none;
+  }
 
