--- a/frontend/src/components/Login/style.css
+++ b/frontend/src/components/Login/style.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 30px;
     margin-top: 15px;
-    box-shadow: -4px 5px #e9e9e8;
+    box-shadow: 0px 4px 4px 4px #e9e9e8;
 }
 .siginWithGoogle:hover{
     cursor: pointer;
