--- a/frontend/src/components/Piganation/style.css
+++ b/frontend/src/components/Piganation/style.css
@@ -8,30 +8,7 @@ html {
     position: relative;
     top: 200px;
     row-gap: 100px;
-    column-gap: 200px;
+    column-gap: 200px
 
 }
-.but_11{
-position: relative;
-left: 800px;
-font-size: 40px;
-height: 50px;
-background-color: white;
-border: none;
 
-}
-.but_11:hover{
-    transform: rotate(20deg)
-}
-.but_22:hover{
-    transform: rotate(-20deg)
-}
-.but_22{
-    position: relative;
-    left: 1000px;
-    height: 50px;
-    font-size: 40px;
-    height: 50px;
-background-color: white;
-border: none;
-}
