--- a/frontend/src/components/productInfo/style.css
+++ b/frontend/src/components/productInfo/style.css
@@ -2,9 +2,9 @@
 .productInfoMain{
     display: grid;
     justify-content: center;
-    row-gap: 30px;
+    row-gap: 10px;
     position: relative;
-    bottom: 300px;
+    bottom: 400px;
     margin-left:120px ;
     
     /* margin-top: 5%; */
@@ -53,28 +53,28 @@
 
 }
 .main_left{
-display: grid;
-justify-content: right;
-position: relative;
-bottom: 690px;
-row-gap: 40px;
-margin-right: 80px;
-}
-.main_left1{
     display: grid;
-    justify-content: center;
-    grid-template-columns:repeat(1,200px) ;
-    row-gap: 20px;
-    font-size: 20px;
-    font-weight: bold;
-    /* border-bottom: 2px solid; */
-    box-shadow: 5px 1px rgb(204, 201, 195);
-
-}
-.p_icons_left{
-    text-align: center;
-    height: 20px;
+    grid-template-columns: repeat(2,200px);
+    justify-content: right;
     position: relative;
-    right: 20px;
-}
-
+    bottom: 770px;
+    column-gap: 20px;
+    margin-right: 80px;
+    }
+    .main_left1{
+        display: grid;
+        justify-content: center;
+        grid-template-columns:repeat(1,200px) ;
+        row-gap: 20px;
+        font-size: 20px;
+        font-weight: bold;
+        /* border-bottom: 2px solid; */
+        box-shadow: 5px 1px 10px 5px  rgb(248, 194, 85);
+    
+    }
+    .p_icons_left{
+        text-align: center;
+        height: 20px;
+        position: relative;
+        right: 20px;
+    }
