--- a/frontend/src/components/Navbar_b_token/style.css
+++ b/frontend/src/components/Navbar_b_token/style.css
@@ -59,8 +59,8 @@ body {
   }
   
   .image_icons{
-    width: 60px;
-    height: 50px;
+    width: 90px;
+    height: 60px;
   }
   .img_main{
   
@@ -73,4 +73,31 @@ body {
     display: inline;
     font-size: 30px;
 
+  }
+  @media only screen and (max-width: 400px) {
+    .Black{
+      height: 80px;
+      /* background-color: #050000;
+      color: white;
+      text-align: center;
+      position: relative;
+      top: 0;
+      left: 400px;
+      font-size: 30px; */
+      
+      
+    }
+    .topnav{
+      display: grid;
+      position: relative;
+      left: 350px;
+    }
+    .image_icons{
+        position: relative;
+        left: 160px;
+    }
+    .p_logo{
+      position: relative;
+      left: 150px;
+    }
   }
