--- a/frontend/src/components/Contact/style.css
+++ b/frontend/src/components/Contact/style.css
@@ -37,3 +37,14 @@
     margin-top: 20px;
     font-size: 20px;
 }
+.active_1{
+    background-color: orange;
+    width: 100%;
+    height: 40px;
+    position: relative;
+    margin-top: 20px;
+    font-size: 20px;
+    opacity: 0.5;
+    
+    
+}
