--- a/frontend/src/components/Admin/style.css
+++ b/frontend/src/components/Admin/style.css
@@ -1,24 +1,160 @@
-.cards{
-    display: flex;
-justify-content: space-around;
-}
-.card_One{
-    display: flex;
-justify-content: center;
-height: 150px;
-width: 280px;
-border: solid 1px white;
-background-color: blue;
-color: white;
+.admin_container{
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+
 }
 
-.admin_container{
-    display: flex;
+.Admin_Body{
+    display: grid;
 }
+
 .dashbord{
-    width: 300px;
-    background-color: rgb(58, 57, 57);
+    width:200px;
+      background-color: rgb(0, 0, 0);
+      color: white;
+      padding-top: 30px;
+      padding-left: 25px;
+      height: auto;
+  }
+
+.cards{
+display: grid;
+grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
+.card_One{
+display: grid;
+height: 150px;
+color: white;
+font-weight: bold;
+}
+
+.card_title_One{
+    display: flex;
+    width: 240px;
+justify-content: center;
+align-items: center;
+padding-left: 25px;
+border-top-left-radius:15px ;
+border-top-right-radius:15px ;
+background-color: blue;
+
+
+}
+
+.card_content_One{
+    display: flex;
+    width: 240px;
+justify-content: center;
+align-items: center;
+padding-left: 25px;
+background-color: rgb(0, 0, 201);
+
+border-bottom-left-radius: 15px;
+border-bottom-right-radius: 15px;
+
+}
+
+
+.card_Two{
+    display: grid;
+    height: 150px;
+    color: white;
+    font-weight: bold;
+    }
+    
+    .card_title_Two{
+        display: flex;
+        width: 240px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 25px;
+    border-top-left-radius:15px ;
+    border-top-right-radius:15px ;
+    background-color: orange;
+    
+    
+    }
+    
+    .card_content_Two{
+        display: flex;
+        width: 240px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 25px;
+    background-color: rgb(228, 149, 2);
+    
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    
+    }
+
+    .card_Three{
+        display: grid;
+        height: 150px;
+        color: white;
+        font-weight: bold;
+        }
+        
+        .card_title_Three{
+            display: flex;
+            width: 240px;
+        justify-content: center;
+        align-items: center;
+        padding-left: 25px;
+        border-top-left-radius:15px ;
+        border-top-right-radius:15px ;
+        background-color: rgb(2, 153, 2);
+        
+        
+        }
+        
+        .card_content_Three{
+            display: flex;
+            width: 240px;
+            border-bottom: 1px solid white;
+        justify-content: center;
+        align-items: center;
+        padding-left: 25px;
+        background-color: green;
+        
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
+        
+        }
+        .card_Four{
+            display: grid;
+            height: 150px;
+            color: white;
+            font-weight: bold;
+            }
+            
+            .card_title_Four{
+                display: flex;
+                width: 240px;
+            justify-content: center;
+            align-items: center;
+            padding-left: 25px;
+            border-top-left-radius:15px ;
+            border-top-right-radius:15px ;
+            background-color: rgb(253, 89, 89);
+            
+            
+            }
+            
+            .card_content_Four{
+                display: flex;
+                width: 240px;
+                border-bottom: 1px solid white;
+            justify-content: center;
+            align-items: center;
+            padding-left: 25px;
+            background-color: rgb(253, 60, 60);
+            
+            border-bottom-left-radius: 15px;
+            border-bottom-right-radius: 15px;
+            
+            }
 
 .Tables{
     display: flex;
@@ -31,7 +167,8 @@ color: white;
     border: solid 1px white;
 }
 
-.Admin_Body{
-    display: grid;
 
+.bord{
+    padding-bottom: 25px;
+    font-weight: bold;
 }
