--- a/frontend/src/components/Admin/style.css
+++ b/frontend/src/components/Admin/style.css
@@ -1,174 +1,166 @@
-.admin_container{
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-
+.admin_container {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
 }
 
-.Admin_Body{
-    display: grid;
+.Admin_Body {
+  display: grid;
 }
 
-.dashbord{
-    width:200px;
-      background-color: rgb(0, 0, 0);
-      color: white;
-      padding-top: 30px;
-      padding-left: 25px;
-      height: auto;
-  }
-
-.cards{
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr;
+.dashbord {
+  width: 200px;
+  padding-left: 25px;
+  height: auto;
 }
 
-.card_One{
-display: grid;
-height: 150px;
-color: white;
-font-weight: bold;
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.card_title_One{
+.card_One {
+  display: grid;
+  height: 150px;
+  color: white;
+  font-weight: bold;
+}
+
+.card_title_One {
+  display: flex;
+  width: 240px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: blue;
+}
+
+.card_content_One {
+  display: flex;
+  width: 240px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  background-color: rgb(0, 0, 201);
+
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.card_Two {
+  display: grid;
+  height: 150px;
+  color: white;
+  font-weight: bold;
+}
+
+.card_title_Two {
+  display: flex;
+  width: 240px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: orange;
+}
+
+.card_content_Two {
+  display: flex;
+  width: 240px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  background-color: rgb(228, 149, 2);
+
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.card_Three {
+  display: grid;
+  height: 150px;
+  color: white;
+  font-weight: bold;
+}
+
+.card_title_Three {
+  display: flex;
+  width: 240px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: rgb(2, 153, 2);
+}
+
+.card_content_Three {
+  display: flex;
+  width: 240px;
+  border-bottom: 1px solid white;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  background-color: green;
+
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.card_Four {
+  display: grid;
+  height: 150px;
+  color: white;
+  font-weight: bold;
+}
+
+.card_title_Four {
+  display: flex;
+  width: 240px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: rgb(253, 89, 89);
+}
+
+.card_content_Four {
+  display: flex;
+  width: 240px;
+  border-bottom: 1px solid white;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+  background-color: rgb(253, 60, 60);
+
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.Tables {
+  display: flex;
+}
+.Table {
+  width: 560px;
+  height: 300px;
+  background-color: gray;
+  border: solid 1px white;
+}
+
+.bord {
     display: flex;
-    width: 240px;
-justify-content: center;
-align-items: center;
-padding-left: 25px;
-border-top-left-radius:15px ;
-border-top-right-radius:15px ;
-background-color: blue;
-
-
-}
-
-.card_content_One{
-    display: flex;
-    width: 240px;
-justify-content: center;
-align-items: center;
-padding-left: 25px;
-background-color: rgb(0, 0, 201);
-
-border-bottom-left-radius: 15px;
-border-bottom-right-radius: 15px;
-
-}
-
-
-.card_Two{
-    display: grid;
-    height: 150px;
-    color: white;
-    font-weight: bold;
-    }
-    
-    .card_title_Two{
-        display: flex;
-        width: 240px;
     justify-content: center;
     align-items: center;
-    padding-left: 25px;
-    border-top-left-radius:15px ;
-    border-top-right-radius:15px ;
-    background-color: orange;
-    
-    
-    }
-    
-    .card_content_Two{
-        display: flex;
-        width: 240px;
-    justify-content: center;
-    align-items: center;
-    padding-left: 25px;
-    background-color: rgb(228, 149, 2);
-    
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    
-    }
-
-    .card_Three{
-        display: grid;
-        height: 150px;
-        color: white;
-        font-weight: bold;
-        }
-        
-        .card_title_Three{
-            display: flex;
-            width: 240px;
-        justify-content: center;
-        align-items: center;
-        padding-left: 25px;
-        border-top-left-radius:15px ;
-        border-top-right-radius:15px ;
-        background-color: rgb(2, 153, 2);
-        
-        
-        }
-        
-        .card_content_Three{
-            display: flex;
-            width: 240px;
-            border-bottom: 1px solid white;
-        justify-content: center;
-        align-items: center;
-        padding-left: 25px;
-        background-color: green;
-        
-        border-bottom-left-radius: 15px;
-        border-bottom-right-radius: 15px;
-        
-        }
-        .card_Four{
-            display: grid;
-            height: 150px;
-            color: white;
-            font-weight: bold;
-            }
-            
-            .card_title_Four{
-                display: flex;
-                width: 240px;
-            justify-content: center;
-            align-items: center;
-            padding-left: 25px;
-            border-top-left-radius:15px ;
-            border-top-right-radius:15px ;
-            background-color: rgb(253, 89, 89);
-            
-            
-            }
-            
-            .card_content_Four{
-                display: flex;
-                width: 240px;
-                border-bottom: 1px solid white;
-            justify-content: center;
-            align-items: center;
-            padding-left: 25px;
-            background-color: rgb(253, 60, 60);
-            
-            border-bottom-left-radius: 15px;
-            border-bottom-right-radius: 15px;
-            
-            }
-
-.Tables{
-    display: flex;
-
+  color: white;
+  margin-bottom: 35px;
+  background-color: rgb(51, 50, 50);
+  border-radius: 15px;
+  font-weight: bold;
+  cursor: pointer;
+height: 45px;
 }
-.Table{
-    width: 560px;
-    height: 300px;
-    background-color: gray;
-    border: solid 1px white;
-}
-
-
-.bord{
-    padding-bottom: 25px;
-    font-weight: bold;
+.bord:hover {
+  box-shadow: 1px 0px 10px 2px gray;
 }
