--- a/frontend/src/components/NewProduct/style.css
+++ b/frontend/src/components/NewProduct/style.css
@@ -1,25 +1,52 @@
 .createProductContainer{
-    display: grid;
+  margin-left: 150px; 
+  width: 600px; 
+  display: grid;
     grid-template-columns: 1fr;
-    margin-top: 50px;
-    background-color: rgba(24, 75, 243, 0.123);
-    width: 500px;
-    margin-bottom: 10px;
     border-radius: 15px;
-  
-  
+  padding: 20px;
+  background-color: rgb(240, 240, 240);
+  box-shadow: 1px 1px 10px 0px;
+  justify-content: center;
   }
   .createProductDiv{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: left;
+  grid-template-columns: 1fr ;
+  justify-content: center;
   align-items: center;
-  padding-left: 20px;
+  padding: 20px;
+
   }
+
+  .createProductDiv_2{
+    display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border-radius: 15px;
+  width: 560px;
+  margin: auto;
+  height: 45px
+  ;
+
+  }
+
+  .createProductDiv_3{
+    display: grid;
+    grid-template-columns: 1fr ;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+    height:20px ;
+    padding-bottom: 40px;
+  
+    }
+
   .mainDiv{
     display: flex;
     justify-items: center;
     justify-content: left;
+    border: 1px solid black;
   }
   .Master{
     display: grid;
@@ -27,11 +54,17 @@
   }
   
   .createButton{
-    background-color: blue;
+    background-color:orange ;
     border: none;
-    color: white;
-    font-style: italic;
+    color: rgb(0, 0, 0);
     font-weight: bolder;
     border-radius: 5px;
     height: 35px;
+    font-size: 15px;
   }
+
+.new_item_input{
+  height: 50px;
+  border-radius: 15px;
+  border: none;
+}
