--- a/frontend/src/components/Charts/style.css
+++ b/frontend/src/components/Charts/style.css
@@ -1,9 +1,9 @@
 .chartMain{
     display: grid;
-    /* justify-items: space-between; */
+   
     height: 50%;
     width: 50%;
-  gap: 1%;
+  /* gap: 1%; */
 
 }
 
@@ -14,6 +14,6 @@
 }
 .h1{
     margin-left: 36%;
-    /* margin-top: 10%; */
+   
     font: 1.5rem sans-serif;
 }
