--- a/frontend/src/components/Charts/style.css
+++ b/frontend/src/components/Charts/style.css
@@ -1,19 +1,5 @@
 .chartMain{
-    display: grid;
-    /* justify-items: space-between; */
-    height: 50%;
-    width: 50%;
-  gap: 1%;
+    display: flex;
 
 }
 
-.charts{
-    height: 100%;
-    width: 100%;
-
-}
-.h1{
-    margin-left: 36%;
-    /* margin-top: 10%; */
-    font: 1.5rem sans-serif;
-}
