--- a/frontend/src/components/About/style.css
+++ b/frontend/src/components/About/style.css
@@ -18,3 +18,13 @@
     display: grid;
     width: 90%;
 }
+@media only screen and (max-width: 400px) {
+
+    .main_div_about{
+        font-size: 20px;
+        position: relative;
+        top: 100px;
+        font-weight: bold;
+        left: 200px;
+    } 
+}
