--- a/frontend/src/components/Contact/style.css
+++ b/frontend/src/components/Contact/style.css
@@ -48,3 +48,36 @@
     
     
 }
+@media only screen and (max-width: 400px) {
+        .parent_contect1{
+            position: relative;
+            top:100px ;
+            font-size: 15px;
+            left: 300px;
+
+        
+    }
+    .contect_P{
+        width: 100px;
+        position: relative;
+    }
+    .Contact_right{
+        display: grid;
+        justify-content: start;
+    }
+   
+}
+.sended{
+    position: relative;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+.label_1{
+position: relative;
+top: 30px;
+font-weight: bold;
+}
+.contact_left input,textarea {
+    text-align: center;
+}
