--- a/frontend/src/components/Footer/style.css
+++ b/frontend/src/components/Footer/style.css
@@ -104,38 +104,38 @@
         position: relative;
         /* top: 35px; */
         display: grid;
-        grid-template-columns: repeat(6,40px);
+        grid-template-rows: repeat(6,40px);
     }
     .copyright{
         position: relative;
-        right: 45px;
+        /* right: 45px; */
+        width: 440px;
     }
     .footer {
-        background-color: rgb(27, 27, 27);
     border-top:2px solid rgb(58, 54, 54);
     height: 100px;
     position: relative;
-    width: 100%;
+    width: 214%;
     bottom: 0; 
-     top: 300px;
-     left: 400px;
+    top: 300px;
     color: white;
     font-size: 25px;
     text-align: center;
     display: grid;
-    grid-template-rows:repeat(3,50px) ;
+    /* grid-template-rows:repeat(3,350px); */
+    grid-template-columns: repeat(3,250px);
     background-color:orange;
     overflow: hidden; 
     }
     .about_register{
         display: grid;
-        grid-template-columns: repeat(3,430px);
+        grid-template-columns: repeat(3,350px);
         justify-content: left;
         justify-items: center;
        
         position: relative;
         top: 200px;
-        right: 30px;
+        right: 80px;
        }
        .about_register1{
         width: 50%;
@@ -143,18 +143,38 @@
        }
        .about_register2{
         display: grid;
-        grid-template-columns: repeat(3,300px);
-        column-gap: 80px;
+        grid-template-columns: repeat(3,290px);
+        column-gap: 10px;
         justify-content: right;
         justify-items: center;
         position: relative;
         top: 280px;
-        left: 200px;
-        width: 900px;
+        left: -45px;
+        /* width: 900px; */
        
        }
        .about_register4{
-        width: 25px;
-        height: 25px;
+        width: 15px;
+        height: 15px;
+
        }
+       .span_about{
+        position: relative;
+        bottom: 70px;
+        top: 20px;
+          left: -70px;     
+              width: 350px;
+        font-size: 10px;
+        font-weight: bold;
+       }
+       .span_about1{
+        position: relative;
+        bottom: 50px;
+        left: 40px;
+        width: 350px;
+        font-size: 10px;
+        font-weight: bold;
+       }
+      
+       
   }
