--- a/frontend/src/components/Navbar_b_token/style.css
+++ b/frontend/src/components/Navbar_b_token/style.css
@@ -19,6 +19,8 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 20px;
+    position: relative;
+    top: 60px;
   }
   
   .topnav a:hover {
@@ -59,45 +61,88 @@ body {
   }
   
   .image_icons{
-    width: 90px;
-    height: 60px;
-  }
+    width: 160px;
+    height: 110px;
+    object-fit:cover;
+    object-position:50% 40% ;
+    position: relative;
+    top: 20px;
+    
+
+ }
+ 
   .img_main{
   
     width:100%;
     object-fit:cover;
     object-position:50% 50%;
     height: 300px;
+    
   }
   .p_logo{
     display: inline;
     font-size: 30px;
+    position: relative;
+    left: 610px;
+    bottom: 20px;
+    text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 30px;
+}
 
+@keyframes textclip {
+  to {
+    background-position: 200% center;
   }
+}
+  
   @media only screen and (max-width: 400px) {
     .Black{
       height: 80px;
-      /* background-color: #050000;
-      color: white;
-      text-align: center;
-      position: relative;
-      top: 0;
-      left: 400px;
-      font-size: 30px; */
+      
       
       
     }
     .topnav{
       display: grid;
       position: relative;
-      left: 350px;
+      width: 214%;
     }
     .image_icons{
         position: relative;
-        left: 160px;
+        left: 360px;
+        top: 30px;
+        
+
     }
     .p_logo{
       position: relative;
-      left: 150px;
+      left: 360px;
+      top: 20px;
+    }
+    .topnav a {
+      float: right;
+      color: #050000;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 20px;
+      position: relative;
+      top: 10px;
     }
   }
