--- a/frontend/src/components/Payment/style.css
+++ b/frontend/src/components/Payment/style.css
@@ -2,7 +2,12 @@
     display: grid;
     justify-content: center;
     border-right: 2px solid black;
-    width: 800px;
+    width: 900px;
+    color: black;
+    /* background-image: url("https://blog.2checkout.com/wp-content/uploads/2020/04/What-Does-Payment-Processing-Mean-Definition-and-Important-Terms-to-Know.png"); */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
+    font-family: sans-serif;
 }
 
 .div_payment{
@@ -15,6 +20,7 @@
     width: 20px;
     position: relative;
     left: 150px;
+    top: 18px;
 }
 .payment_div_detials{
     display: grid;
@@ -42,7 +48,10 @@
     width: 20px;
     position: relative;
     left: 150px;
+    top: 18px;
+    
 }
+
 .payment_go{
     background-color: orange;
     width: 100%;
@@ -53,9 +62,11 @@
 
 }
 .payment_go1{
-    background-color: orange;
+    background-color:orange;
     position: relative;
     font-size: 20px;
+    border: none;
+    padding: 0;
 }
 .payment_go ,.payment_go1:hover{
     cursor: pointer;
@@ -64,6 +75,13 @@
     display: grid;
     grid-template-columns: repeat(2,100px);
     border-bottom: 2px solid black;
+    width: 180px;
+
+
+}
+.details_card_one1{
+    display: grid;
+    grid-template-columns: repeat(2,100px);
 
 
 }
@@ -72,8 +90,10 @@
     row-gap: 50px;
     float: right;
     position: relative;
-    bottom: 500px;
+    bottom: 850px;
     right: 300px;
+    color: black;
+   
 
 }
 .main_main_main{
@@ -88,4 +108,22 @@
 .main_payment{
     display: grid;
     row-gap: 20px;
+    
 }
+.container_cart{
+    display: grid;
+    grid-template-columns: repeat(3,70px);
+    justify-content: center;
+    border: 2px salmon orange;
+    border-radius: 20px;
+}
+.image_info{
+    width: 50px;
+    height: 50px;
+}
+.main_info1{
+    border-bottom: 2px solid ;
+   
+    
+}
+
