--- a/frontend/src/components/Register/style.css
+++ b/frontend/src/components/Register/style.css
@@ -82,4 +82,49 @@
     filter: brightness(100%)
     
 }
+@media only screen and (max-width: 400px) {
+    .Form{
+        display: grid;
+        justify-content: center;
+        position: relative;
+        top: 100px;
+        font-size: 10px;
+        left: 220px;
+        
+    }
+    .image_login2{
+        display: inline-block;
+        width: 200px;
+        height: 200px;
+        position: relative;
+        left: 600px;
+        bottom: 300px;
+        overflow: hidden;
+    
+    }
+    .image_login3{
+        display: inline-block;
+        width: 200px;
+        height: 200px;
+        position: relative;
+        right: 150px;
+        bottom: 300px;
+        overflow: hidden;
+        
+    
+    }
+}
+.image_login3 p {
+    font-weight: bold;
+    display: grid;
+
+}
+.image_last{
+    height: 100px;
+    width: 100%;
+    object-fit:cover;
+    object-position:50% 70%;
+    
+}
+
 
