--- a/frontend/src/components/Footer/style.css
+++ b/frontend/src/components/Footer/style.css
@@ -109,13 +109,13 @@
     .copyright{
         position: relative;
         /* right: 45px; */
-        width: 440px;
+        width: 350px;
     }
     .footer {
     border-top:2px solid rgb(58, 54, 54);
     height: 100px;
     position: relative;
-    width: 214%;
+    width: 180%;
     bottom: 0; 
     top: 300px;
     color: white;
@@ -123,19 +123,19 @@
     text-align: center;
     display: grid;
     /* grid-template-rows:repeat(3,350px); */
-    grid-template-columns: repeat(3,250px);
+    grid-template-columns: repeat(3,190px);
     background-color:orange;
     overflow: hidden; 
     }
     .about_register{
         display: grid;
-        grid-template-columns: repeat(3,350px);
+        grid-template-columns: repeat(3,300px);
         justify-content: left;
         justify-items: center;
        
         position: relative;
         top: 200px;
-        right: 80px;
+        right: 60px;
        }
        .about_register1{
         width: 50%;
@@ -143,13 +143,13 @@
        }
        .about_register2{
         display: grid;
-        grid-template-columns: repeat(3,290px);
+        grid-template-columns: repeat(3,230px);
         column-gap: 10px;
         justify-content: right;
         justify-items: center;
         position: relative;
         top: 280px;
-        left: -45px;
+        left: -220px;
         /* width: 900px; */
        
        }
@@ -174,6 +174,15 @@
         width: 350px;
         font-size: 10px;
         font-weight: bold;
+       }
+       .master_card{
+        position: relative;
+        top: 35px;
+        display: grid;
+        grid-template-columns: repeat(3,40px);
+        left: 220px;
+    
+       
        }
       
        
